vlib/v/checker/tests/index_of_option_err.out
vlib/v/checker/tests/index_of_option_err.vv:6:7: error: type `?[]int` is an option, it must be unwrapped `func()` or use or-block `or {}`
    4 | 
    5 | fn main() {
    6 |     a := abc()[0] or { 5 }
      |          ~~~~~
    7 |     dump(a)
    8 | }
